--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Character encoding for proper text rendering -->
   <meta charset="UTF-8">
-
-  <!-- Page title shown in browser tab and screen readers -->
   <title>Don Norman – Home</title>
 </head>
 <body>
 
-  <!-- Page header: identifies the site and its purpose -->
   <header>
     <h1>Don Norman</h1>
     <p>Human–Computer Interaction Philosopher</p>
   </header>
 
-  <!-- Primary navigation landmark for keyboard and screen reader users -->
   <nav aria-label="Primary navigation">
     <ul>
-      <!-- Current page is indicated using aria-current -->
-      <li>
-        <a href="index.html" aria-current="page">Home</a>
-      </li>
-
-      <!-- Navigation links to other site sections -->
+      <li><a href="index.html" aria-current="page">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="analysis.html">Interaction Analysis</a></li>
       <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
       <li><a href="assignment01.html">Lab 01 Rules</a></li>
-
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+ 
     </ul>
   </nav>
 
-  <!-- Main content landmark: unique content of this page -->
   <main>
+
     <section>
-      <!-- Section heading establishes content hierarchy -->
       <h2>Biography</h2>
 
-      <!-- Informative image with alternative text for accessibility -->
       <img src="norman.jpg" alt="Portrait of Don Norman">
 
       <p>
-        Don Norman is a pioneer in the field of Human–Computer Interaction,
-        known for his work on user-centered design, usability, and cognitive
-        engineering.
+        Don Norman is a pioneer in the field of Human–Computer Interaction.
+        He is widely known for introducing the concept of user-centered design
+        and usability in everyday products.
       </p>
     </section>
+
+    <section>
+      <h2>Why Human–Computer Interaction Matters</h2>
+
+      <p>
+        Human–Computer Interaction focuses on making systems easy to use,
+        efficient, and accessible. Good design reduces user errors and
+        improves overall experience.
+      </p>
+
+      <p>
+        Don Norman’s work helps designers understand how people think and
+        interact with technology in real-world situations.
+      </p>
+    </section>
+
   </main>
 
-  <!-- Footer contains meta or supplementary information -->
   <footer>
     <p>&copy; 2026 HCI–CG Course</p>
-  <p>
-    <a href="assignment01.html">Lab 01 Instructions</a> |
-    <a href="https://github.com/humeraaa/hci-cg-2026">Starter Code</a> |
-    <a href="https://humeraaa.github.io/hci-cg-2026/">Live Demo</a>
-  </p>
+    <p>
+      <a href="assignment01.html">Lab 01 Instructions</a> |
+      <a href="https://github.com/humeraaa/hci-cg-2026">Starter Code</a>
+    </p>
   </footer>
 
 </body>
