Implement Norman's Principles section in index.html
Added a new section outlining Norman's design principles and how they are applied to the website.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <title>Don Norman – Home</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #fff;
+      color: #333;
+    }
+
+    header {
+      background-color: #0077cc;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      background-color: #eee;
+      margin: 0;
+    }
+
+    nav ul li {
+      margin: 0 10px;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section {
+      margin-bottom: 30px;
+    }
+
+    #norman {
+      background-color: #f9f9f9;
+      padding: 20px;
+      margin: 20px 0;
+      border-radius: 8px;
+    }
+
+    #norman .principle {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      background-color: #fff;
+    }
+
+    #norman h3 {
+      margin-top: 0;
+    }
+
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9em;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 10px 0;
+    }
+  </style>
 </head>
 <body>
 
@@ -22,7 +101,6 @@
       <li><a href="assignment01.html">Lab 01 Rules</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="gallery.html">Gallery</a></li>
- 
     </ul>
   </nav>
 
@@ -30,9 +108,7 @@
 
     <section>
       <h2>Biography</h2>
-
       <img src="norman.jpg" alt="Portrait of Don Norman">
-
       <p>
         Don Norman is a pioneer in the field of Human–Computer Interaction.
         He is widely known for introducing the concept of user-centered design
@@ -42,17 +118,42 @@
 
     <section>
       <h2>Why Human–Computer Interaction Matters</h2>
-
       <p>
         Human–Computer Interaction focuses on making systems easy to use,
         efficient, and accessible. Good design reduces user errors and
         improves overall experience.
       </p>
-
       <p>
         Don Norman’s work helps designers understand how people think and
         interact with technology in real-world situations.
       </p>
+    </section>
+
+    <section id="norman">
+      <h2>Norman’s Principles in Our Website</h2>
+      <p>Don Norman is a famous HCI expert who taught us that good design should be easy to use and understand. We tried to follow some of his ideas while making this website.</p>
+
+      <div class="principle">
+        <h3>1. Visibility 👀</h3>
+        <p>We made all buttons and links clear so users know what to click and what will happen next.</p>
+      </div>
+
+      <div class="principle">
+        <h3>2. Feedback ✅</h3>
+        <p>Every time a user clicks a button or fills a form, the website gives a response so the user knows their action worked.</p>
+      </div>
+
+      <div class="principle">
+        <h3>3. Simple Structure 📂</h3>
+        <p>Menus and pages are organized so users can find what they need easily without getting confused.</p>
+      </div>
+
+      <div class="principle">
+        <h3>4. Error Prevention ⚠️</h3>
+        <p>We tried to avoid mistakes by showing clear instructions and disabling impossible options.</p>
+      </div>
+
+      <p>These are just some ways we followed Norman’s ideas to make this website user-friendly. 🙂</p>
     </section>
 
   </main>
