Remove emojis from headings in index.html

--- a/index.html
+++ b/index.html
@@ -134,26 +134,26 @@
       <p>Don Norman is a famous HCI expert who taught us that good design should be easy to use and understand. We tried to follow some of his ideas while making this website.</p>
 
       <div class="principle">
-        <h3>1. Visibility 👀</h3>
+        <h3>1. Visibility</h3>
         <p>We made all buttons and links clear so users know what to click and what will happen next.</p>
       </div>
 
       <div class="principle">
-        <h3>2. Feedback ✅</h3>
+        <h3>2. Feedback</h3>
         <p>Every time a user clicks a button or fills a form, the website gives a response so the user knows their action worked.</p>
       </div>
 
       <div class="principle">
-        <h3>3. Simple Structure 📂</h3>
+        <h3>3. Simple Structure</h3>
         <p>Menus and pages are organized so users can find what they need easily without getting confused.</p>
       </div>
 
       <div class="principle">
-        <h3>4. Error Prevention ⚠️</h3>
+        <h3>4. Error Prevention</h3>
         <p>We tried to avoid mistakes by showing clear instructions and disabling impossible options.</p>
       </div>
 
-      <p>These are just some ways we followed Norman’s ideas to make this website user-friendly. 🙂</p>
+      <p>These are just some ways we followed Norman’s ideas to make this website user-friendly.</p>
     </section>
 
   </main>
